--- a/page1.html
+++ b/page1.html
@@ -47,8 +47,10 @@
   <body>
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
       <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
-        <div class="mdl-layout__header-row">
-          <div id="p1" class="mdl-progress mdl-js-progress" style="width: 150px;"></div>
+        <div class="mdl-layout__header-row" style="padding:0 16px 0 18px;">
+          <p style="margin-top: 18px; font-size: 18px; padding-right: 6px;">LVL</p>
+          <p style="margin-top: 16px; background-color: rgb(0,188,212); border-radius: 50%; width: 28px; height: 30px; padding-left: 8px; padding-right: 0px; padding-top: 5px; font-weight:  600; color: #333; font-size: 16px;">21</p>
+          <div id="p1" class="mdl-progress mdl-js-progress" style="width: 150px; height: 12px;"></div>
           <script>
             document.querySelector('#p1').addEventListener('mdl-componentupgraded', function() {
               this.MaterialProgress.setProgress(44);
@@ -112,8 +114,10 @@
           </div>
         </div>
       </main>
+      <footer class="fixed-bottom mdl-color--grey-100" style="min-height: 90px; box-shadow: 0 -3px 2px 0 rgba(0,0,0,.14), 0 -3px 1px -2px rgba(0,0,0,.2), 0 0px 5px 0 rgba(0,0,0,.12); z-index: 4;">
+        <p>TEST</p>
+      </footer>
     </div>
-      <a href="https://github.com/google/material-design-lite/blob/mdl-1.x/templates/dashboard/" target="_blank" id="view-source" class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored mdl-color-text--white">View Source</a>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
 </html>
