--- a/page1.html
+++ b/page1.html
@@ -32,6 +32,8 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.cyan-light_blue.min.css">
     <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="./styles/font-awesome.min.css">
+
     <style>
     #view-source {
       position: fixed;
@@ -47,7 +49,7 @@
   <body>
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
       <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
-        <div class="mdl-layout__header-row" style="padding:0 16px 0 18px;">
+        <div class="mdl-layout__header-row" style="padding: 0 16px 0 18px;">
           <p style="margin-top: 18px; font-size: 18px; padding-right: 6px;">LVL</p>
           <p style="margin-top: 16px; background-color: rgb(0,188,212); border-radius: 50%; width: 28px; height: 30px; padding-left: 8px; padding-right: 0px; padding-top: 5px; font-weight:  600; color: #333; font-size: 16px;">21</p>
           <div id="p1" class="mdl-progress mdl-js-progress" style="width: 150px; height: 12px;"></div>
@@ -114,8 +116,19 @@
           </div>
         </div>
       </main>
-      <footer class="fixed-bottom mdl-color--grey-100" style="min-height: 90px; box-shadow: 0 -3px 2px 0 rgba(0,0,0,.14), 0 -3px 1px -2px rgba(0,0,0,.2), 0 0px 5px 0 rgba(0,0,0,.12); z-index: 4;">
-        <p>TEST</p>
+      <footer class="fixed-bottom mdl-color--grey-100" style="text-align: center; min-height: 90px; box-shadow: 0 -3px 2px 0 rgba(0,0,0,.14), 0 -3px 1px -2px rgba(0,0,0,.2), 0 0px 5px 0 rgba(0,0,0,.12); z-index: 4;">
+        <div style="display: inline-block; padding: 5px 15px;">
+          <i class="fa fa-compass" style="color: #666; font-size: 75px;"></i>
+        </div>
+        <div style="display: inline-block; padding: 5px 15px;">
+          <i class="fa fa-globe" style="color: #666; font-size: 75px;"></i>
+        </div>
+        <div style="display: inline-block; padding: 5px 15px;">
+          <img src="./images/podium.png" style="width: 70px; height: auto; margin-top: -35px; image-rendering: -webkit-optimize-contrast;"></i>
+        </div>
+        <div style="display: inline-block; padding: 5px 15px;">
+          <i class="fa fa-shopping-cart" style="color: #666; font-size: 75px;"></i>
+        </div>
       </footer>
     </div>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
