--- a/social.html
+++ b/social.html
@@ -86,13 +86,19 @@
               </div>
             </div>
             <div class="demo-separator mdl-cell--1-col" style="height: 24px;"></div>
-            <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-desktop" style="min-height: 0;">
-              <div class="mdl-card__title" style="background-color: #d2d2d2 !important; display: block; color: #565656;">
-                <h2 class="mdl-card__title-text">
-                  My Profile
-                </h2><br>
-                <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored">
-                  Button
+            <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-desktop" style="min-height: 0; text-align: center;">
+              <div class="mdl-card__title" style="background-color: #fff !important; display: block; color: #565656;">
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="background-color: rgb(129, 212, 0); font-size: 22px; min-height: 50px; margin-top: 10px; margin-bottom: 10px; width: 90%;">
+                  Find Friends
+                </button><br>
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="font-size: 22px; min-height: 50px; margin-top: 10px; margin-bottom: 10px; width: 90%;">
+                  Statistics
+                </button><br>
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="background-color: rgb(204, 75, 255); font-size: 22px; min-height: 50px; margin-top: 10px; margin-bottom: 10px; width: 90%;">
+                  Achievements
+                </button><br>
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="background-color: rgb(255, 53, 31); font-size: 22px; min-height: 50px; margin-top: 10px; margin-bottom: 10px; width: 90%;">
+                  Quests
                 </button>
               </div>
             </div>
