--- a/social.html
+++ b/social.html
@@ -49,7 +49,7 @@
   <body>
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
       <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
-        <div class="mdl-layout__header-row" style="padding: 0 16px 0 18px;">
+        <div class="mdl-layout__header-row" style="padding: 0 0px 0 8px;">
           <p style="margin-top: 18px; font-size: 18px; padding-right: 6px;">LVL</p>
           <p style="margin-top: 16px; background-color: rgb(0,188,212); border-radius: 50%; width: 28px; height: 30px; padding-left: 8px; padding-right: 0px; padding-top: 5px; font-weight:  600; color: #333; font-size: 16px; margin-right: -2px;">21</p>
           <div id="p1" class="mdl-progress mdl-js-progress" style="width: 130px; height: 12px;"></div>
@@ -61,6 +61,8 @@
           <div class="mdl-layout-spacer"></div>
           <img src="images/flame.png" style="width: 30px;"></img>
           <p style="margin-top: 18px; font-size: 18px; padding-right: 6px; color: #f39945;">5 DAYS</p>
+          <img src="images/volt2.png" style="width: 30px;"></img>
+          <p style="margin-top: 18px; font-size: 18px; padding-right: 8px; color: #1b1b1b; font-weight: 500;">62 VOLT</p>
         </div>
       </header>
       <main class="mdl-layout__content mdl-color--grey-100">
@@ -76,7 +78,7 @@
                   <div style="display: inline-block; line-height: 27px;">
                     <span style="font-weight: 600;">Name:</span><span style="position: absolute; left: 180px;">Ezequiel</span><br>
                     <span style="font-weight: 600;">Age:</span><span style="position: absolute; left: 180px;">21</span><br>
-                    <span style="font-weight: 600;">Interests:</span><span style="position: absolute; left: 180px;">Heavy Metal, Electronics</span>
+                    <span style="font-weight: 600;">Interests:</span><span style="position: absolute; left: 180px;">Heavy Metal, Blockchain</span>
                   </div>
               </div>
               <div class="mdl-card__actions mdl-card--border" style="text-align: right;">
