--- a/page1.html
+++ b/page1.html
@@ -46,8 +46,7 @@
     }
     </style>
   </head>
-  <body>
-    <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
+  <body><div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
       <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
         <div class="mdl-layout__header-row" style="padding: 0 16px 0 18px;">
           <p style="margin-top: 18px; font-size: 18px; padding-right: 6px;">LVL</p>
@@ -62,75 +61,66 @@
           
         </div>
       </header>
-      <main class="mdl-layout__content mdl-color--grey-100">
-        <div class="mdl-grid demo-content">
-          <div class="demo-cards mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-grid mdl-grid--no-spacing">
-            <div class="demo-updates mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-desktop">
-              <div class="mdl-card__title mdl-card--expand mdl-color--teal-300">
-                <h2 class="mdl-card__title-text">Updates</h2>
-              </div>
-              <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-                Non dolore elit adipisicing ea reprehenderit consectetur culpa.
-              </div>
-              <div class="mdl-card__actions mdl-card--border">
-                <a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect">Read More</a>
-              </div>
-            </div>
-            <div class="demo-separator mdl-cell--1-col"></div>
-            <div class="demo-options mdl-card mdl-color--deep-purple-500 mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--3-col-tablet mdl-cell--12-col-desktop">
-              <div class="mdl-card__supporting-text mdl-color-text--blue-grey-50">
-                <h3>View options</h3>
-                <ul>
-                  <li>
-                    <label for="chkbox1" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-                      <input type="checkbox" id="chkbox1" class="mdl-checkbox__input">
-                      <span class="mdl-checkbox__label">Click per object</span>
-                    </label>
-                  </li>
-                  <li>
-                    <label for="chkbox2" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-                      <input type="checkbox" id="chkbox2" class="mdl-checkbox__input">
-                      <span class="mdl-checkbox__label">Views per object</span>
-                    </label>
-                  </li>
-                  <li>
-                    <label for="chkbox3" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-                      <input type="checkbox" id="chkbox3" class="mdl-checkbox__input">
-                      <span class="mdl-checkbox__label">Objects selected</span>
-                    </label>
-                  </li>
-                  <li>
-                    <label for="chkbox4" class="mdl-checkbox mdl-js-checkbox mdl-js-ripple-effect">
-                      <input type="checkbox" id="chkbox4" class="mdl-checkbox__input">
-                      <span class="mdl-checkbox__label">Objects viewed</span>
-                    </label>
-                  </li>
-                </ul>
-              </div>
-              <div class="mdl-card__actions mdl-card--border">
-                <a href="#" class="mdl-button mdl-js-button mdl-js-ripple-effect mdl-color-text--blue-grey-50">Change location</a>
-                <div class="mdl-layout-spacer"></div>
-                <i class="material-icons">location_on</i>
-              </div>
-            </div>
-          </div>
-        </div>
-      </main>
+
+     <main class="mdl-layout__content mdl-color--grey-100" style="text-align:center;"> 
+<br>
+
+<div style="text-align:center;display:inline-block;">
+	<form action="#">
+  		<div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
+    			<input class="mdl-textfield__input" type="text" id="sample3">
+    			<label class="mdl-textfield__label" for="sample3">Where do you wanna go?</label> </div>
+<button class="mdl-button mdl-button--raised mdl-js-button dialog-button" style="height: 27px"><i class="material-icons" style="margin-top:-10px">search</i></button> 
+	</form> </div>
+<div>
+<button class="mdl-button mdl-js-button mdl-button--raised" style="width: 89%;">
+  NONE OF YOUR BUSINESS!
+</button>
+</div>
+<dialog id="dialog" class="mdl-dialog" style="width:85%;">
+<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d21593.052893379263!2d9.373770581055542!3d47.428876983845406!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x479b1e464af2dfb9%3A0xac965fa20ac903d4!2sUniversity+of+St.+Gallen!5e0!3m2!1spt-PT!2sch!4v1519522302978" width="600" height="500" frameborder="0" style="border:0" allowfullscreen></iframe>
+  <div class="mdl-dialog__actions">
+    <button type="button" class="mdl-button">Cancel</button>
+<button type="button" class="mdl-button">Cancel</button>
+
+  </div>
+
+</dialog>
+
+
+	
+
+
+</main>
       <footer class="fixed-bottom mdl-color--grey-100" style="text-align: center; min-height: 90px; box-shadow: 0 -3px 2px 0 rgba(0,0,0,.14), 0 -3px 1px -2px rgba(0,0,0,.2), 0 0px 5px 0 rgba(0,0,0,.12); z-index: 4;">
         <div style="display: inline-block; padding: 5px 15px;">
-          <i class="fa fa-compass" style="color: #666; font-size: 75px;"></i>
+          <a href="./page1.html"><i class="fa fa-compass" style="color: #000; font-size: 75px;"></i></a>
         </div>
         <div style="display: inline-block; padding: 5px 15px;">
-          <i class="fa fa-globe" style="color: #666; font-size: 75px;"></i>
+          <a href="./social.html"><i class="fa fa-globe" style="color: #666; font-size: 75px;"></i></a>
         </div>
         <div style="display: inline-block; padding: 5px 15px;">
-          <img src="./images/podium.png" style="width: 70px; height: auto; margin-top: -35px; image-rendering: -webkit-optimize-contrast;"></i>
+          <a href="./leaderboard.html"><img src="./images/podium.png" style="width: 70px; height: auto; margin-top: -35px; image-rendering: -webkit-optimize-contrast;"></i></a>
         </div>
         <div style="display: inline-block; padding: 5px 15px;">
-          <i class="fa fa-shopping-cart" style="color: #666; font-size: 75px;"></i>
+          <a href="./shop.html"><i class="fa fa-shopping-cart" style="color: #666; font-size: 75px;"></i></a>
         </div>
       </footer>
-    </div>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+  <script>(function() {
+    'use strict';
+    var dialogButton = document.querySelector('.dialog-button');
+    var dialog = document.querySelector('#dialog');
+    if (! dialog.showModal) {
+      dialogPolyfill.registerDialog(dialog);
+    }
+    dialogButton.addEventListener('click', function() {
+       dialog.showModal();
+    });
+    dialog.querySelector('button:not([disabled])')
+    .addEventListener('click', function() {
+      dialog.close();
+    });
+  }());</script>
   </body>
 </html>
