--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
   <body>
     <div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
       <main class="mdl-layout__content mdl-color--grey-100">
-        <div class="mdl-grid demo-content" style="text-align: center;">
+        <div class="mdl-grid demo-content" style="text-align: center; margin-top: 35px;">
           <div class="demo-cards mdl-cell mdl-cell--4-col mdl-cell--8-col-tablet mdl-grid mdl-grid--no-spacing">
             <div class="mdl-card mdl-shadow--2dp mdl-cell mdl-cell--4-col mdl-cell--4-col-tablet mdl-cell--12-col-desktop">
               <!--
@@ -56,7 +56,9 @@
               </div>
               -->
               <div class="mdl-card__supporting-text mdl-color-text--grey-600">
-                Login with your VOLVO account.
+                <img src="images/volt2.png" style="width: 300px;"></img><br>
+                Login with your VOLVO account.<br>
+                <p style="font-weight: 500; padding-top: 10px;">VOLT powered by DECAF</p>
                 <form action="#">
                   <div class="mdl-textfield mdl-js-textfield mdl-textfield--floating-label">
                     <input class="mdl-textfield__input" type="text" id="sample3">
@@ -68,7 +70,7 @@
                   </div>
                 </form>
               </div>
-              <div class="mdl-card__actions mdl-card--border">
+              <div class="mdl-card__actions" style="padding-bottom: 30px;">
                 <a class="mdl-button mdl-js-button mdl-button--raised" href="./page1.html" style="color: #000;">
                   Login
                 </a>
