--- a/quest.html
+++ b/quest.html
@@ -65,7 +65,7 @@
           <p style="margin-top: 18px; font-size: 18px; padding-right: 8px; color: #1b1b1b; font-weight: 500;">62 VOLT</p>
         </div>
       </header>
-        
+
       </header>
 
       <main class="mdl-layout__content mdl-color--grey-100">
@@ -80,10 +80,10 @@
           <i class="fa fa-compass" style="color: #666; font-size: 75px;"></i>
         </div>
         <div style="display: inline-block; padding: 5px 15px;">
-          <i class="fa fa-globe" style="color: #666; font-size: 75px;"></i>
+          <i class="fa fa-globe" style="color: #000; font-size: 75px;"></i>
         </div>
         <div style="display: inline-block; padding: 5px 15px;">
-          <img src="./images/pod1.png" style="width: 70px; height: auto; margin-top: -35px; image-rendering: -webkit-optimize-contrast;"></i>
+          <img src="./images/podium.png" style="width: 70px; height: auto; margin-top: -35px; image-rendering: -webkit-optimize-contrast;"></i>
         </div>
         <div style="display: inline-block; padding: 5px 15px;">
           <i class="fa fa-shopping-cart" style="color: #666; font-size: 75px;"></i>
