--- a/social.html
+++ b/social.html
@@ -108,19 +108,19 @@
         </div>
       </main>
       <footer class="fixed-bottom mdl-color--grey-100" style="text-align: center; min-height: 90px; box-shadow: 0 -3px 2px 0 rgba(0,0,0,.14), 0 -3px 1px -2px rgba(0,0,0,.2), 0 0px 5px 0 rgba(0,0,0,.12); z-index: 4;">
-        <div style="display: inline-block; padding: 5px 15px;">
-          <i class="fa fa-compass" style="color: #666; font-size: 75px;"></i>
-        </div>
-        <div style="display: inline-block; padding: 5px 15px;">
-          <i class="fa fa-globe" style="color: #000; font-size: 75px;"></i>
-        </div>
-        <div style="display: inline-block; padding: 5px 15px;">
-          <img src="./images/podium.png" style="width: 70px; height: auto; margin-top: -35px; image-rendering: -webkit-optimize-contrast;"></i>
-        </div>
-        <div style="display: inline-block; padding: 5px 15px;">
-          <i class="fa fa-shopping-cart" style="color: #666; font-size: 75px;"></i>
-        </div>
-      </footer>
+          <div style="display: inline-block; padding: 5px 15px;">
+            <a href="./page1.html"><i class="fa fa-compass" style="color: #666; font-size: 75px;"></i></a>
+          </div>
+          <div style="display: inline-block; padding: 5px 15px;">
+            <a href="./social.html"><i class="fa fa-globe" style="color: #000; font-size: 75px;"></i></a>
+          </div>
+          <div style="display: inline-block; padding: 5px 15px;">
+            <a href="./leaderboard.html"><img src="./images/podium.png" style="width: 70px; height: auto; margin-top: -35px; image-rendering: -webkit-optimize-contrast;"></i></a>
+          </div>
+          <div style="display: inline-block; padding: 5px 15px;">
+            <a href="./shop.html"><i class="fa fa-shopping-cart" style="color: #666; font-size: 75px;"></i></a>
+          </div>
+        </footer>
     </div>
     <script src="https://code.getmdl.io/1.3.0/material.min.js"></script>
   </body>
