--- a/page1.html
+++ b/page1.html
@@ -48,20 +48,22 @@
   </head>
   <body><div class="demo-layout mdl-layout mdl-js-layout mdl-layout--fixed-drawer mdl-layout--fixed-header">
       <header class="demo-header mdl-layout__header mdl-color--grey-100 mdl-color-text--grey-600">
-        <div class="mdl-layout__header-row" style="padding: 0 16px 0 18px;">
+        <div class="mdl-layout__header-row" style="padding: 0 0px 0 8px;">
           <p style="margin-top: 18px; font-size: 18px; padding-right: 6px;">LVL</p>
-          <p style="margin-top: 16px; background-color: rgb(0,188,212); border-radius: 50%; width: 28px; height: 30px; padding-left: 8px; padding-right: 0px; padding-top: 5px; font-weight:  600; color: #333; font-size: 16px;">21</p>
-          <div id="p1" class="mdl-progress mdl-js-progress" style="width: 150px; height: 12px;"></div>
+          <p style="margin-top: 16px; background-color: rgb(0,188,212); border-radius: 50%; width: 28px; height: 30px; padding-left: 8px; padding-right: 0px; padding-top: 5px; font-weight:  600; color: #333; font-size: 16px; margin-right: -2px;">21</p>
+          <div id="p1" class="mdl-progress mdl-js-progress" style="width: 130px; height: 12px;"></div>
           <script>
             document.querySelector('#p1').addEventListener('mdl-componentupgraded', function() {
               this.MaterialProgress.setProgress(44);
             });
           </script>
           <div class="mdl-layout-spacer"></div>
-          
+          <img src="images/flame.png" style="width: 30px;"></img>
+          <p style="margin-top: 18px; font-size: 18px; padding-right: 6px; color: #f39945;">5 DAYS</p>
+          <img src="images/volt2.png" style="width: 30px;"></img>
+          <p style="margin-top: 18px; font-size: 18px; padding-right: 8px; color: #1b1b1b; font-weight: 500;">62 VOLT</p>
         </div>
       </header>
-
      <main class="mdl-layout__content mdl-color--grey-100" style="text-align:center;"> 
 <br>
 
@@ -82,15 +84,8 @@
   <div class="mdl-dialog__actions">
     <button type="button" class="mdl-button">Cancel</button>
 <button type="button" class="mdl-button">Cancel</button>
-
   </div>
-
 </dialog>
-
-
-	
-
-
 </main>
       <footer class="fixed-bottom mdl-color--grey-100" style="text-align: center; min-height: 90px; box-shadow: 0 -3px 2px 0 rgba(0,0,0,.14), 0 -3px 1px -2px rgba(0,0,0,.2), 0 0px 5px 0 rgba(0,0,0,.12); z-index: 4;">
         <div style="display: inline-block; padding: 5px 15px;">
