--- a/social.html
+++ b/social.html
@@ -99,9 +99,9 @@
                 <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="background-color: rgb(204, 75, 255); font-size: 22px; min-height: 50px; margin-top: 10px; margin-bottom: 10px; width: 90%;">
                   Achievements
                 </button><br>
-                <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="background-color: rgb(255, 53, 31); font-size: 22px; min-height: 50px; margin-top: 10px; margin-bottom: 10px; width: 90%;">
+                <a href="./quest.html" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="background-color: rgb(255, 53, 31); font-size: 22px; min-height: 50px; margin-top: 10px; margin-bottom: 10px; width: 90%;">
                   Quests
-                </button>
+                </a>
               </div>
             </div>
           </div>
