--- a/social.html
+++ b/social.html
@@ -93,13 +93,16 @@
                 <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="background-color: rgb(129, 212, 0); font-size: 22px; min-height: 50px; margin-top: 10px; margin-bottom: 10px; width: 90%;">
                   Find Friends
                 </button><br>
+                <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="background-color: rgb(212, 164, 0); font-size: 22px; min-height: 50px; margin-top: 10px; margin-bottom: 10px; width: 90%;">
+                  Join Club
+                </button><br>
                 <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="font-size: 22px; min-height: 50px; margin-top: 10px; margin-bottom: 10px; width: 90%;">
                   Statistics
                 </button><br>
                 <button class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="background-color: rgb(204, 75, 255); font-size: 22px; min-height: 50px; margin-top: 10px; margin-bottom: 10px; width: 90%;">
                   Achievements
                 </button><br>
-                <a href="./quest.html" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="background-color: rgb(255, 53, 31); font-size: 22px; min-height: 50px; margin-top: 10px; margin-bottom: 10px; width: 90%;">
+                <a href="./quest.html" class="mdl-button mdl-js-button mdl-button--raised mdl-button--colored" style="background-color: rgb(255, 53, 31); font-size: 22px; min-height: 50px; margin-top: 10px; margin-bottom: 10px; width: 81%; line-height: 50px;">
                   Quests
                 </a>
               </div>
